[gd_scene load_steps=46 format=3 uid="uid://1usfs7be33jv"]

[ext_resource type="Script" path="res://MobsScript2D/Goblin1.gd" id="1_3ffw1"]
[ext_resource type="Texture2D" uid="uid://c3vsn7iygkrnc" path="res://Textures/Mobs/Goblin/Attack.png" id="2_w2m6l"]
[ext_resource type="Texture2D" uid="uid://dkib035k5egfd" path="res://Textures/Mobs/Goblin/Death.png" id="3_w07t3"]
[ext_resource type="Texture2D" uid="uid://cn8bcc7u4kqn4" path="res://Textures/Mobs/Goblin/Idle.png" id="4_aarfw"]
[ext_resource type="Texture2D" uid="uid://y5kjh3kalpnd" path="res://Textures/Mobs/Goblin/Run.png" id="5_vomkr"]
[ext_resource type="Texture2D" uid="uid://xdspt3ke656d" path="res://Textures/Mobs/Goblin/Take Hit.png" id="6_d05e2"]
[ext_resource type="PackedScene" uid="uid://cfxn7vbo6ae7w" path="res://DamageBox/damage_box.tscn" id="7_xdokh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fipuj"]
radius = 11.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5hrm2"]
atlas = ExtResource("2_w2m6l")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hvda"]
atlas = ExtResource("2_w2m6l")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_votww"]
atlas = ExtResource("2_w2m6l")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxm62"]
atlas = ExtResource("2_w2m6l")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj67a"]
atlas = ExtResource("2_w2m6l")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekchn"]
atlas = ExtResource("2_w2m6l")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dberl"]
atlas = ExtResource("2_w2m6l")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoqfu"]
atlas = ExtResource("2_w2m6l")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii13h"]
atlas = ExtResource("3_w07t3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_segfl"]
atlas = ExtResource("3_w07t3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8mni"]
atlas = ExtResource("3_w07t3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0ydf"]
atlas = ExtResource("3_w07t3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a52q4"]
atlas = ExtResource("4_aarfw")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5dv"]
atlas = ExtResource("4_aarfw")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1w0n"]
atlas = ExtResource("4_aarfw")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_106iy"]
atlas = ExtResource("4_aarfw")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uowpx"]
atlas = ExtResource("5_vomkr")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_raglf"]
atlas = ExtResource("5_vomkr")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_icteg"]
atlas = ExtResource("5_vomkr")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_aklwi"]
atlas = ExtResource("5_vomkr")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7b2g"]
atlas = ExtResource("5_vomkr")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ucr0"]
atlas = ExtResource("5_vomkr")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l13i"]
atlas = ExtResource("5_vomkr")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm8g6"]
atlas = ExtResource("5_vomkr")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd5cr"]
atlas = ExtResource("6_d05e2")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4he3o"]
atlas = ExtResource("6_d05e2")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss6te"]
atlas = ExtResource("6_d05e2")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cl60"]
atlas = ExtResource("6_d05e2")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_aluyb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hrm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hvda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_votww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxm62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj67a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekchn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dberl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoqfu")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii13h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_segfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8mni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0ydf")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a52q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1w0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_106iy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uowpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raglf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icteg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aklwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7b2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ucr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l13i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm8g6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd5cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4he3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss6te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cl60")
}],
"loop": false,
"name": &"take_hit",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7uphm"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_otx6s"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}

[sub_resource type="Animation" id="Animation_ncmux"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="Animation" id="Animation_07xpp"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="Animation" id="Animation_es8de"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["take_hit"]
}

[sub_resource type="Animation" id="Animation_lesdw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rpmgq"]
_data = {
"Attack": SubResource("Animation_7uphm"),
"RESET": SubResource("Animation_lesdw"),
"death": SubResource("Animation_otx6s"),
"idle": SubResource("Animation_ncmux"),
"run": SubResource("Animation_07xpp"),
"take_hit": SubResource("Animation_es8de")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6bnl"]
size = Vector2(14, 15.5)

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_3ffw1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_fipuj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -5)
scale = Vector2(0.7125, 0.7125)
sprite_frames = SubResource("SpriteFrames_aluyb")
animation = &"Attack"
autoplay = "idle"
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rpmgq")
}
autoplay = "idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/Area2D"]
position = Vector2(19, -2)
shape = SubResource("RectangleShape2D_k6bnl")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_xdokh")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(1, 0)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(19, 0)

[connection signal="body_entered" from="AttackDirection/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttackDirection/DamageBox"]
